--- a/android/src/main/res/layout/activity_five_image.xml
+++ b/android/src/main/res/layout/activity_five_image.xml
@@ -1,67 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".FiveImageActivity">
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="137dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="102dp"
-        app:srcCompat="@drawable/ic_menu_camera" />
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="137dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="139dp"
-        android:layout_marginTop="102dp"
-        app:srcCompat="@drawable/ic_menu_camera" />
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="horizontal"
+        android:weightSum="3">
 
-    </RelativeLayout>
+<!--        <FrameLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="right"-->
+<!--            android:layout_weight="1">-->
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="137dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        app:srcCompat="@drawable/ic_menu_camera" />
+            <ImageButton
+                android:id="@+id/image1"
+                android:layout_width="0dp"
+                android:layout_height="190dp"
+                android:layout_weight="1"
+                />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="137dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="138dp"
-        android:layout_marginTop="0dp"
-        app:srcCompat="@drawable/ic_menu_camera" />
+<!--            <ImageButton-->
+<!--                android:id="@+id/deleteBtn1"-->
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="137dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="276dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="-2dp"
-        app:srcCompat="@drawable/ic_menu_camera" />
+<!--                android:layout_width="20dp"-->
+<!--                android:layout_height="20dp"-->
+<!--                android:layout_gravity="right"-->
+<!--                android:src="@android:drawable/ic_delete"-->
+<!--                app:layout_constraintBottom_toBottomOf="@+id/image1"-->
+<!--                app:layout_constraintTop_toTopOf="@+id/image1" />-->
+<!--        </FrameLayout>-->
 
-</RelativeLayout>
+        <ImageButton
+            android:id="@+id/image2"
+            android:layout_width="0dp"
+            android:layout_height="190dp"
+            android:layout_weight="1" />
+
+        <ImageButton
+            android:id="@+id/image3"
+            android:layout_width="0dp"
+            android:layout_height="190dp"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="horizontal"
+        android:weightSum="3">
+
+        <ImageButton
+            android:id="@+id/image4"
+            android:layout_width="0dp"
+            android:layout_height="190dp"
+            android:layout_weight="1" />
+
+        <ImageButton
+            android:id="@+id/image5"
+            android:layout_width="0dp"
+            android:layout_height="190dp"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+
+</LinearLayout>
